Resolves: tdf#100440 check mode to be 0 or 1 for MONTHS(), YEARS() and WEEKS()

Needed to adapt the WEEKS and YEARS test documents to cope with the
change.

Change-Id: Ia52505418f4fed684bd04290c608e2a65eee2fbc